- updated readme - fixed layout issue

--- a/overlay/match/style.css
+++ b/overlay/match/style.css
@@ -65,6 +65,11 @@ body {
 
 #mappoolScene {
     opacity:1;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 1920px;
+    height: 1080px;
 }
 
 /* OVERVIEW SCENE */
